use grid to fix alignment hack

--- a/src/ReservationForm.scss
+++ b/src/ReservationForm.scss
@@ -139,10 +139,9 @@
 		box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
 		&__tutor_info {
-				display: flex;
-				flex-direction: row;
+				display:grid;
+				grid-template-columns: 0fr 1fr;
 				padding: 1rem;
-				padding-bottom: 0; //because of b.s. alignment hack
 				gap: 1rem;
 
 				&__image {
@@ -155,7 +154,7 @@
 				}
 
 				&__bio {
-						display:flex;
+						display: flex;
 						flex-direction: column;
 						align-items: flex-start;
 						justify-content: center;
@@ -191,7 +190,6 @@
 		&__slot_info {
 				background-color: #F1F5F9;
 				margin:0;
-				margin-top: 1rem; //because of b.s. alignment hack
 				padding: 1rem;
 				border-bottom-left-radius: 8px;
 				border-bottom-right-radius: 8px;
